PLUT-385 add JSON output format
